# OSPSD_HW1

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.cursor/rules/: hw-supply.mdc  hw.mdc
docs/: component.md  components.md
src/: __init__.py  calculator.py  logger.py  notifier.py
src/calculator/: __init__.py  pyproject.toml
src/calculator/tests/: test_calculator.py
src/logger/: __init__.py  api.py  pyproject.toml
src/notifier/: api.py  pyproject.toml
src/notifier/tests/: test_notifier.py
tests/: test_basic.py
tests/end_to_end_tests/: test_end_to_end.py
tests/integration_tests/: test_integration_calculator_logger.py  test_integration_logger_notifier.py
tests/unit_tests/: test_basic3.py  test_calculator.py  test_logger.py  test_notifier.py
